--- a/css/style.css
+++ b/css/style.css
@@ -517,9 +517,9 @@ ul {
 .nav-bar {
   background: rgba(0,0,0,0.5);
 }
-
 .logo {
-  margin-top: 33px;  
+  margin-top: 33px;
+  
 }
 
 .round{
@@ -3908,7 +3908,7 @@ ul {
   z-index: 9999999;
 }
 .status {
-  background-image: url(../images/Spinner.svg);
+  background-image: url(../images/logo.png);
   animation: fade 5s;
  -webkit-animation: fade 5s;
  -moz-animation: fade 5s;
